--- a/home.html
+++ b/home.html
@@ -3,9 +3,17 @@
 <head>
   <title>Geography Game</title>
   <link rel="stylesheet" type="text/css" href="css/app.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>`
+  <script src="js/EuropeanCountries.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
+<div class = "correctAnswers"></div>
+<div id="timer"></div>
+  <form id="new-country-form">
+    <textarea id="new-country-input"></textarea>
+    <button>Submit!</button>
+  </form>
 
 </body>
 </html>
