--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class = "correctAnswers"></div>
-<div id="timer"></div>
+<div id="screen">00:00:00</div>
   <form id="new-country-form">
     <textarea id="new-country-input"></textarea>
     <button>Submit!</button>
