Enter key working

--- a/home.html
+++ b/home.html
@@ -11,9 +11,8 @@
 <div class = "correctAnswers"></div>
 <div id="screen">00:00</div>
   <form id="new-country-form">
-    <textarea id="new-country-input"></textarea>
-    <button>Submit!</button>
+    <input id="new-country-input">
   </form>
-
+  <button>Start!</button>
 </body>
 </html>
