Adding new fields on html

--- a/home.html
+++ b/home.html
@@ -8,11 +8,15 @@
   <script src="js/app.js"></script>
 </head>
 <body>
-<div class = "correctAnswers"></div>
-<div id="screen">00:00</div>
+<div class = "container">
+  <div class = "score">Winner!</div>
+  <div class = "correctAnswers"></div>
+  <div id="screen">00:00</div>
+  <div class = "correct answers">number of correct answers goes here</div>
   <form id="new-country-form">
     <input id="new-country-input">
   </form>
+</div>
   <button>Start!</button>
 </body>
 </html>
