--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class = "container">
+  <img src="Images/EuropeMap2.png">
   <div class = "score">Winner!</div>
   <div class = "correctAnswers"></div>
   <div id="screen">00:00</div>
