Adding printing countries feature

--- a/home.html
+++ b/home.html
@@ -13,9 +13,10 @@
   <div class = "score">Winner!</div>
   <div class = "correctAnswers"></div>
   <div id="screen">00:00</div>
-  <div class = "correct answers">number of correct answers goes here</div>
+  <ul id="printAnswers">
+  </ul>
   <form id="new-country-form">
-    <input id="new-country-input">
+    <input id="new-country-input" class="hidden">
   </form>
 </div>
   <button>Start!</button>
