Made start button disapear at clicck

--- a/home.html
+++ b/home.html
@@ -19,6 +19,6 @@
     <input id="new-country-input" class="hidden">
   </form>
 </div>
-  <button>Start!</button>
+  <button class="hidden">Start!</button>
 </body>
 </html>
