--- a/home.html
+++ b/home.html
@@ -8,9 +8,12 @@
   <script src="js/app.js"></script>
 </head>
 <body>
+
 <div class = "container">
   <img src="Images/EuropeMap2.png">
-  <div class = "score">Winner!</div>
+  <img src="Images/Map-Marker.png">
+  <div class = "score">player1</div>
+  <div class = "score">player2</div>
   <div class = "correctAnswers"></div>
   <div id="screen">00:00</div>
   <ul id="printAnswers">
