commiting before code shuffle

--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
 
 <div class = "container">
   <img src="Images/EuropeMap2.png">
-  <img src="Images/Map-Marker.png">
-  <div class = "score">player1</div>
-  <div class = "score">player2</div>
-  <div class = "correctAnswers"></div>
+<!--   <img src="Images/Map-Marker.png"> -->
+  <div class="score1">player1</div>
+  <div class="score2">player2</div>
+  <div class="correctAnswers"></div>
   <div id="screen">00:00</div>
   <ul id="printAnswers">
   </ul>
@@ -23,5 +23,6 @@
   </form>
 </div>
   <button class="hidden">Start!</button>
+  <div class="winner"></div>
 </body>
 </html>
