--- a/home.html
+++ b/home.html
@@ -13,63 +13,57 @@
   <div class="container">
     <div class="map-content">
       <img class="map" src="Images/map.png">
-      <img class="pin" class="albania"src="Images/pin.png">
-      <img class="pin" class="andorra"src="Images/pin.png">
-      <img class="pin" class="armenia"src="Images/pin.png">
-      <img class="pin" class="austria"src="Images/pin.png">
-      <img class="pin" class="azerbaijan"src="Images/pin.png">
-      <img class="pin" class="belarus"src="Images/pin.png">
-      <img class="pin" class="belgium"src="Images/pin.png">
-      <img class="pin" class="bosnia-and-herzegovina"src="Images/pin.png">
-      <img class="pin" class="bulgaria"src="Images/pin.png">
-      <img class="pin" class="croatia"src="Images/pin.png">
-      <img class="pin" class="cyprus"src="Images/pin.png">
-      <img class="pin" class="czech-republic"src="Images/pin.png">
-      <img class="pin" class="denmark"src="Images/pin.png">
-      <img class="pin" class="estonia"src="Images/pin.png">
-      <img class="pin" class="finland"src="Images/pin.png">
-      <img class="pin" class="france"src="Images/pin.png">
-      <img class="pin" class="georgia"src="Images/pin.png">
-      <img class="pin" class="germany"src="Images/pin.png">
-      <img class="pin" class="greece"src="Images/pin.png">
-      <img class="pin" class="hungary"src="Images/pin.png">
-      <img class="pin" class="iceland"src="Images/pin.png">
-      <img class="pin" class="ireland"src="Images/pin.png">
-      <img class="pin" class="italy"src="Images/pin.png">
-      <img class="pin" class="kosovo"src="Images/pin.png">
-      <img class="pin" class="latvia"src="Images/pin.png">
-      <img class="pin" class="liechtenstein"src="Images/pin.png">
-      <img class="pin" class="lithuania"src="Images/pin.png">
-      <img class="pin" class="luxembourg"src="Images/pin.png">
-      <img class="pin" class="macedonia"src="Images/pin.png">
-      <img class="pin" class="malta"src="Images/pin.png">
-      <img class="pin" class="moldova"src="Images/pin.png">
-      <img class="pin" class="monaco"src="Images/pin.png">
-      <img class="pin" class="montenegro"src="Images/pin.png">
-      <img class="pin" class="the-netherlands"src="Images/pin.png">
-      <img class="pin" class="norway"src="Images/pin.png">
-      <img class="pin" class="poland"src="Images/pin.png">
-      <img class="pin" class="portugal"src="Images/pin.png">
-      <img class="pin" class="romania"src="Images/pin.png">
-      <img class="pin" class="russia"src="Images/pin.png">
-      <img class="pin" class="san-marino"src="Images/pin.png">
-      <img class="pin" class="serbia"src="Images/pin.png">
-      <img class="pin" class="slovakia"src="Images/pin.png">
-      <img class="pin" class="slovenia"src="Images/pin.png">
-      <img class="pin" class="spain"src="Images/pin.png">
-      <img class="pin" class="sweden"src="Images/pin.png">
-      <img class="pin" class="switzerland"src="Images/pin.png">
-      <img class="pin" class="turkey"src="Images/pin.png">
-      <img class="pin" class="ukraine"src="Images/pin.png">
-      <img class="pin" class="united-kingdom"src="Images/pin.png">
-      <img class="pin" class="vatican-city"src="Images/pin.png">
-      <img class="pin" class="albania"src="Images/pin.png">
-      <img class="pin" class="albania"src="Images/pin.png">
-      <img class="pin" class="albania"src="Images/pin.png">
-      <img class="pin" class="albania"src="Images/pin.png">
-      <img class="pin" class="albania"src="Images/pin.png">
-      <img class="pin" class="albania"src="Images/pin.png">
-
+      <img class="pin" class="albania" src="Images/pin.png">
+      <img class="pin" class="andorra" src="Images/pin.png">
+      <img class="pin" class="armenia" src="Images/pin.png">
+      <img class="pin" class="austria" src="Images/pin.png">
+      <img class="pin" class="azerbaijan" src="Images/pin.png">
+      <img class="pin" class="belarus" src="Images/pin.png">
+      <img class="pin" class="belgium" src="Images/pin.png">
+      <img class="pin" class="bosnia-and-herzegovina" src="Images/pin.png">
+      <img class="pin" class="bulgaria" src="Images/pin.png">
+      <img class="pin" class="croatia" src="Images/pin.png">
+      <img class="pin" class="cyprus" src="Images/pin.png">
+      <img class="pin" class="czech-republic" src="Images/pin.png">
+      <img class="pin" class="denmark" src="Images/pin.png">
+      <img class="pin" class="estonia" src="Images/pin.png">
+      <img class="pin" class="finland" src="Images/pin.png">
+      <img class="pin" class="france" src="Images/pin.png">
+      <img class="pin" class="georgia" src="Images/pin.png">
+      <img class="pin" class="germany" src="Images/pin.png">
+      <img class="pin" class="greece" src="Images/pin.png">
+      <img class="pin" class="hungary" src="Images/pin.png">
+      <img class="pin" class="iceland" src="Images/pin.png">
+      <img class="pin" class="ireland" src="Images/pin.png">
+      <img class="pin" class="italy" src="Images/pin.png">
+      <img class="pin" class="kosovo" src="Images/pin.png">
+      <img class="pin" class="latvia" src="Images/pin.png">
+      <img class="pin" class="liechtenstein" src="Images/pin.png">
+      <img class="pin" class="lithuania" src="Images/pin.png">
+      <img class="pin" class="luxembourg" src="Images/pin.png">
+      <img class="pin" class="macedonia" src="Images/pin.png">
+      <img class="pin" class="malta" src="Images/pin.png">
+      <img class="pin" class="moldova" src="Images/pin.png">
+      <img class="pin" class="monaco" src="Images/pin.png">
+      <img class="pin" class="montenegro" src="Images/pin.png">
+      <img class="pin" class="the-netherlands" src="Images/pin.png">
+      <img class="pin" class="norway" src="Images/pin.png">
+      <img class="pin" class="poland" src="Images/pin.png">
+      <img class="pin" class="portugal" src="Images/pin.png">
+      <img class="pin" class="romania" src="Images/pin.png">
+      <img class="pin" class="russia" src="Images/pin.png">
+      <img class="pin" class="san-marino" src="Images/pin.png">
+      <img class="pin" class="serbia" src="Images/pin.png">
+      <img class="pin" class="slovakia" src="Images/pin.png">
+      <img class="pin" class="slovenia" src="Images/pin.png">
+      <img class="pin" class="spain" src="Images/pin.png">
+      <img class="pin" class="sweden" src="Images/pin.png">
+      <img class="pin" class="switzerland" src="Images/pin.png">
+      <img class="pin" class="turkey" src="Images/pin.png">
+      <img class="pin" class="ukraine" src="Images/pin.png">
+      <img class="pin" class="united-kingdom" src="Images/pin.png">
+      <img class="pin" class="vatican-city" src="Images/pin.png">
+      </img>
     </div>
 
     <div class="scores">
