Adding pin positioning

--- a/home.html
+++ b/home.html
@@ -13,57 +13,56 @@
   <div class="container">
     <div class="map-content">
       <img class="map" src="Images/map.png">
-      <img class="pin" class="albania" src="Images/pin.png">
-      <img class="pin" class="andorra" src="Images/pin.png">
-      <img class="pin" class="armenia" src="Images/pin.png">
-      <img class="pin" class="austria" src="Images/pin.png">
-      <img class="pin" class="azerbaijan" src="Images/pin.png">
-      <img class="pin" class="belarus" src="Images/pin.png">
-      <img class="pin" class="belgium" src="Images/pin.png">
-      <img class="pin" class="bosnia-and-herzegovina" src="Images/pin.png">
-      <img class="pin" class="bulgaria" src="Images/pin.png">
-      <img class="pin" class="croatia" src="Images/pin.png">
-      <img class="pin" class="cyprus" src="Images/pin.png">
-      <img class="pin" class="czech-republic" src="Images/pin.png">
-      <img class="pin" class="denmark" src="Images/pin.png">
-      <img class="pin" class="estonia" src="Images/pin.png">
-      <img class="pin" class="finland" src="Images/pin.png">
-      <img class="pin" class="france" src="Images/pin.png">
-      <img class="pin" class="georgia" src="Images/pin.png">
-      <img class="pin" class="germany" src="Images/pin.png">
-      <img class="pin" class="greece" src="Images/pin.png">
-      <img class="pin" class="hungary" src="Images/pin.png">
-      <img class="pin" class="iceland" src="Images/pin.png">
-      <img class="pin" class="ireland" src="Images/pin.png">
-      <img class="pin" class="italy" src="Images/pin.png">
-      <img class="pin" class="kosovo" src="Images/pin.png">
-      <img class="pin" class="latvia" src="Images/pin.png">
-      <img class="pin" class="liechtenstein" src="Images/pin.png">
-      <img class="pin" class="lithuania" src="Images/pin.png">
-      <img class="pin" class="luxembourg" src="Images/pin.png">
-      <img class="pin" class="macedonia" src="Images/pin.png">
-      <img class="pin" class="malta" src="Images/pin.png">
-      <img class="pin" class="moldova" src="Images/pin.png">
-      <img class="pin" class="monaco" src="Images/pin.png">
-      <img class="pin" class="montenegro" src="Images/pin.png">
-      <img class="pin" class="the-netherlands" src="Images/pin.png">
-      <img class="pin" class="norway" src="Images/pin.png">
-      <img class="pin" class="poland" src="Images/pin.png">
-      <img class="pin" class="portugal" src="Images/pin.png">
-      <img class="pin" class="romania" src="Images/pin.png">
-      <img class="pin" class="russia" src="Images/pin.png">
-      <img class="pin" class="san-marino" src="Images/pin.png">
-      <img class="pin" class="serbia" src="Images/pin.png">
-      <img class="pin" class="slovakia" src="Images/pin.png">
-      <img class="pin" class="slovenia" src="Images/pin.png">
-      <img class="pin" class="spain" src="Images/pin.png">
-      <img class="pin" class="sweden" src="Images/pin.png">
-      <img class="pin" class="switzerland" src="Images/pin.png">
-      <img class="pin" class="turkey" src="Images/pin.png">
-      <img class="pin" class="ukraine" src="Images/pin.png">
-      <img class="pin" class="united-kingdom" src="Images/pin.png">
-      <img class="pin" class="vatican-city" src="Images/pin.png">
-      </img>
+      <img class="pin albania" src="Images/pin.png">
+      <img class="pin andorra" src="Images/pin.png">
+      <img class="pin armenia" src="Images/pin.png">
+      <img class="pin austria" src="Images/pin.png">
+      <img class="pin azerbaijan" src="Images/pin.png">
+      <img class="pin belarus" src="Images/pin.png">
+      <img class="pin belgium" src="Images/pin.png">
+      <img class="pin bosnia-and-herzegovina" src="Images/pin.png">
+      <img class="pin bulgaria" src="Images/pin.png">
+      <img class="pin croatia" src="Images/pin.png">
+      <img class="pin cyprus" src="Images/pin.png">
+      <img class="pin czech-republic" src="Images/pin.png">
+      <img class="pin denmark" src="Images/pin.png">
+      <img class="pin estonia" src="Images/pin.png">
+      <img class="pin finland" src="Images/pin.png">
+      <img class="pin france" src="Images/pin.png">
+      <img class="pin georgia" src="Images/pin.png">
+      <img class="pin germany" src="Images/pin.png">
+      <img class="pin greece" src="Images/pin.png">
+      <img class="pin hungary" src="Images/pin.png">
+      <img class="pin iceland" src="Images/pin.png">
+      <img class="pin ireland" src="Images/pin.png">
+      <img class="pin italy" src="Images/pin.png">
+      <img class="pin kosovo" src="Images/pin.png">
+      <img class="pin latvia" src="Images/pin.png">
+      <img class="pin liechtenstein" src="Images/pin.png">
+      <img class="pin lithuania" src="Images/pin.png">
+      <img class="pin luxembourg" src="Images/pin.png">
+      <img class="pin macedonia" src="Images/pin.png">
+      <img class="pin malta" src="Images/pin.png">
+      <img class="pin moldova" src="Images/pin.png">
+      <img class="pin monaco" src="Images/pin.png">
+      <img class="pin montenegro" src="Images/pin.png">
+      <img class="pin the-netherlands" src="Images/pin.png">
+      <img class="pin norway" src="Images/pin.png">
+      <img class="pin poland" src="Images/pin.png">
+      <img class="pin portugal" src="Images/pin.png">
+      <img class="pin romania" src="Images/pin.png">
+      <img class="pin russia" src="Images/pin.png">
+      <img class="pin san-marino" src="Images/pin.png">
+      <img class="pin serbia" src="Images/pin.png">
+      <img class="pin slovakia" src="Images/pin.png">
+      <img class="pin slovenia" src="Images/pin.png">
+      <img class="pin spain" src="Images/pin.png">
+      <img class="pin sweden" src="Images/pin.png">
+      <img class="pin switzerland" src="Images/pin.png">
+      <img class="pin turkey" src="Images/pin.png">
+      <img class="pin ukraine" src="Images/pin.png">
+      <img class="pin united-kingdom" src="Images/pin.png">
+      <img class="pin vatican-city" src="Images/pin.png">
     </div>
 
     <div class="scores">
