Adding class of hidden to pins

--- a/home.html
+++ b/home.html
@@ -13,56 +13,56 @@
   <div class="container">
     <div class="map-content">
       <img class="map" src="Images/map.png">
-      <img class="pin albania" src="Images/pin.png">
-      <img class="pin andorra" src="Images/pin.png">
-      <img class="pin armenia" src="Images/pin.png">
-      <img class="pin austria" src="Images/pin.png">
-      <img class="pin azerbaijan" src="Images/pin.png">
-      <img class="pin belarus" src="Images/pin.png">
-      <img class="pin belgium" src="Images/pin.png">
-      <img class="pin bosnia-and-herzegovina" src="Images/pin.png">
-      <img class="pin bulgaria" src="Images/pin.png">
-      <img class="pin croatia" src="Images/pin.png">
-      <img class="pin cyprus" src="Images/pin.png">
-      <img class="pin czech-republic" src="Images/pin.png">
-      <img class="pin denmark" src="Images/pin.png">
-      <img class="pin estonia" src="Images/pin.png">
-      <img class="pin finland" src="Images/pin.png">
-      <img class="pin france" src="Images/pin.png">
-      <img class="pin georgia" src="Images/pin.png">
-      <img class="pin germany" src="Images/pin.png">
-      <img class="pin greece" src="Images/pin.png">
-      <img class="pin hungary" src="Images/pin.png">
-      <img class="pin iceland" src="Images/pin.png">
-      <img class="pin ireland" src="Images/pin.png">
-      <img class="pin italy" src="Images/pin.png">
-      <img class="pin kosovo" src="Images/pin.png">
-      <img class="pin latvia" src="Images/pin.png">
-      <img class="pin liechtenstein" src="Images/pin.png">
-      <img class="pin lithuania" src="Images/pin.png">
-      <img class="pin luxembourg" src="Images/pin.png">
-      <img class="pin macedonia" src="Images/pin.png">
-      <img class="pin malta" src="Images/pin.png">
-      <img class="pin moldova" src="Images/pin.png">
-      <img class="pin monaco" src="Images/pin.png">
-      <img class="pin montenegro" src="Images/pin.png">
-      <img class="pin the-netherlands" src="Images/pin.png">
-      <img class="pin norway" src="Images/pin.png">
-      <img class="pin poland" src="Images/pin.png">
-      <img class="pin portugal" src="Images/pin.png">
-      <img class="pin romania" src="Images/pin.png">
-      <img class="pin russia" src="Images/pin.png">
-      <img class="pin san-marino" src="Images/pin.png">
-      <img class="pin serbia" src="Images/pin.png">
-      <img class="pin slovakia" src="Images/pin.png">
-      <img class="pin slovenia" src="Images/pin.png">
-      <img class="pin spain" src="Images/pin.png">
-      <img class="pin sweden" src="Images/pin.png">
-      <img class="pin switzerland" src="Images/pin.png">
-      <img class="pin turkey" src="Images/pin.png">
-      <img class="pin ukraine" src="Images/pin.png">
-      <img class="pin united-kingdom" src="Images/pin.png">
-      <img class="pin vatican-city" src="Images/pin.png">
+      <img class="pin albania hidden" src="Images/pin.png">
+      <img class="pin andorra hidden" src="Images/pin.png">
+      <img class="pin armenia hidden" src="Images/pin.png">
+      <img class="pin austria hidden" src="Images/pin.png">
+      <img class="pin azerbaijan hidden" src="Images/pin.png">
+      <img class="pin belarus hidden" src="Images/pin.png">
+      <img class="pin belgium hidden" src="Images/pin.png">
+      <img class="pin bosnia-and-herzegovina hidden" src="Images/pin.png">
+      <img class="pin bulgaria hidden" src="Images/pin.png">
+      <img class="pin croatia hidden" src="Images/pin.png">
+      <img class="pin cyprus hidden" src="Images/pin.png">
+      <img class="pin czech-republic hidden" src="Images/pin.png">
+      <img class="pin denmark hidden" src="Images/pin.png">
+      <img class="pin estonia hidden" src="Images/pin.png">
+      <img class="pin finland hidden" src="Images/pin.png">
+      <img class="pin france hidden" src="Images/pin.png">
+      <img class="pin georgia hidden" src="Images/pin.png">
+      <img class="pin germany hidden" src="Images/pin.png">
+      <img class="pin greece hidden" src="Images/pin.png">
+      <img class="pin hungary hidden" src="Images/pin.png">
+      <img class="pin iceland hidden" src="Images/pin.png">
+      <img class="pin ireland hidden" src="Images/pin.png">
+      <img class="pin italy hidden" src="Images/pin.png">
+      <img class="pin kosovo hidden" src="Images/pin.png">
+      <img class="pin latvia hidden" src="Images/pin.png">
+      <img class="pin liechtenstein hidden" src="Images/pin.png">
+      <img class="pin lithuania hidden" src="Images/pin.png">
+      <img class="pin luxembourg hidden" src="Images/pin.png">
+      <img class="pin macedonia hidden" src="Images/pin.png">
+      <img class="pin malta hidden" src="Images/pin.png">
+      <img class="pin moldova hidden" src="Images/pin.png">
+      <img class="pin monaco hidden" src="Images/pin.png">
+      <img class="pin montenegro hidden" src="Images/pin.png">
+      <img class="pin the-netherlands hidden" src="Images/pin.png">
+      <img class="pin norway hidden" src="Images/pin.png">
+      <img class="pin poland hidden" src="Images/pin.png">
+      <img class="pin portugal hidden" src="Images/pin.png">
+      <img class="pin romania hidden" src="Images/pin.png">
+      <img class="pin russia hidden" src="Images/pin.png">
+      <img class="pin san-marino hidden" src="Images/pin.png">
+      <img class="pin serbia hidden" src="Images/pin.png">
+      <img class="pin slovakia hidden" src="Images/pin.png">
+      <img class="pin slovenia hidden" src="Images/pin.png">
+      <img class="pin spain hidden" src="Images/pin.png">
+      <img class="pin sweden hidden" src="Images/pin.png">
+      <img class="pin switzerland hidden" src="Images/pin.png">
+      <img class="pin turkey hidden" src="Images/pin.png">
+      <img class="pin ukraine hidden" src="Images/pin.png">
+      <img class="pin united-kingdom hidden" src="Images/pin.png">
+      <img class="pin vatican-city hidden" src="Images/pin.png">
     </div>
 
     <div class="scores">
