pin positioning showing on the page

--- a/home.html
+++ b/home.html
@@ -52,7 +52,6 @@
       <img class="pin portugal hidden" src="Images/pin.png">
       <img class="pin romania hidden" src="Images/pin.png">
       <img class="pin russia hidden" src="Images/pin.png">
-      <img class="pin san-marino hidden" src="Images/pin.png">
       <img class="pin serbia hidden" src="Images/pin.png">
       <img class="pin slovakia hidden" src="Images/pin.png">
       <img class="pin slovenia hidden" src="Images/pin.png">
@@ -63,6 +62,7 @@
       <img class="pin ukraine hidden" src="Images/pin.png">
       <img class="pin united-kingdom hidden" src="Images/pin.png">
       <img class="pin vatican-city hidden" src="Images/pin.png">
+      <img class="pin san-marino hidden" src="Images/pin.png">
     </div>
 
     <div class="scores">
@@ -76,7 +76,7 @@
       <input id="new-country-input" autocomplete="off" class="hidden" placeholder="Enter names here">
     </form>
   </div>
-  <button class="hidden">Start!</button>
+  <button class="">Start!</button>
   <div class="winner"></div>
   </body>
 </html>
