Styling fonts and colours

--- a/home.html
+++ b/home.html
@@ -66,8 +66,8 @@
     </div>
 
     <div class="scores">
-      <div class="score1">player1</div>
-      <div class="score2">player2</div>
+      <div class="score1"></div>
+      <div class="score2"></div>
     </div>
 
     <div id="screen">00:00</div>
