changing http to https when loading in jquery

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <title>Geography Game</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/app.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/EuropeanCountries.js"></script>
   <script src="js/app.js"></script>
 </head>
