fixed spelling mistake

--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="container">
+  <!-- image, audio and pins per country. Added class of hidden -->
     <div class="map-content">
       <img class="map" src="Images/map.png">
       <audio src="Sounds/Woosh-Mark_DiAngelo-4778593.wav"></audio>
@@ -71,12 +72,13 @@
     </div>
 
     <div id="screen">00:00</div>
-
+<!-- text box -->
     <form id="new-country-form">
-      <input id="new-country-input" autocomplete="off" class="hidden" placeholder="Enter contry name here">
+      <input id="new-country-input" autocomplete="off" class="hidden" placeholder="Enter country name here">
     </form>
-  <!--   <button class="start-game">Go!</button> -->
+
   </div>
+  <!-- welcome screen place holder and button-->
   <div class="welcome-screen">
     <h1>Geography Game!</h1>
     <h3>Name as many countries in Europe as fast as you can</h3>
